Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-Dec-2011 Jean-Marie Simonet
 # [#27416] *Strict in com_users
 # [#27261] strict standards on initialise. Thanks Christophe

19-Dec-2011 Jean-Marie Simonet
 # [#27011] Page Navigation rel next/prev back to front. Thanks James
 # [#27372] Configuration.php-dist for multi-db. Thanks Christophe.
 $ Updating installation ini file hu-HU
 $ Updating installation ini file pt-PT, ru-RU
 + Adding da.gif for mod_languages


19-Dec-2011 Mark Dexter
 # [#27415] Missing platform change for update notification

18-Dec-2011 Christophe Demko
 + [#27371] Category filtering on content doesn't including sub-categories (Ofer Cohen)
 # [#27413] Two fixes to Database files to support seamless installation on multidb (Sudhi Seshachala)
 + [#27306] User Notes (Andrew Eddie)

18-Dec-2011 Mark Dexter
 ^ [#27361] mod_status optimization (Kyle Ledbetter)

18-Dec-2011 Jean-Marie Simonet
 # Correcting Rev 22542 reintroducing error corrected in #27342 (Type display in Plugin Manager)
 $ Miscellaneous corrections to ini strings (duplicate, extraneous spaces). Thanks Valc.
 $ Updating installation ini files ka-GE. Adding new language ur-PK.
 $ Missing string.
 - Taking off unused string (for now) from installation en-GB and en-US added in #27282
 # [#27411] *Batch language action broken for categories.
 ^ Updating xml version to 2.5
 $ Updating installation ini nl-NL

17-Dec-2011 Mark Dexter
 + [#27387] Catch up to the current platform
 + [#27282] Add ability to support other databases, starting with Microsoft SQL Server (thanks Hooduku)

17-Dec-2011 Christophe Demko
 # [#27401] Strict standards: Declaration of TemplatesModelStyle
 # [#27400] Strict standards: Declaration of CategoriesModelCategory