@@ -146,7 +146,7 @@ class CategoriesModelCategory extends JModelAdmin
 			if (intval($result->created_time)) {
 				$date = new JDate($result->created_time);
 				$date->setTimezone($tz);
-				$result->created_time = $date->format('Y-m-d H:i:s', true);
+				$result->created_time = $date->toSql(true);
 			}
 			else {
 				$result->created_time = null;
@@ -155,7 +155,7 @@ class CategoriesModelCategory extends JModelAdmin
 			if (intval($result->modified_time)) {
 				$date = new JDate($result->modified_time);
 				$date->setTimezone($tz);
-				$result->modified_time = $date->format('Y-m-d H:i:s', true);
+				$result->modified_time = $date->toSql(true);
 			}
 			else {
 				$result->modified_time = null;
