@@ -65,13 +65,13 @@ class WeblinksTableWeblink extends JTable
 		$user	= JFactory::getUser();
 		if ($this->id) {
 			// Existing item
-			$this->modified		= $date->format($this->_db->Quote($this->_db->getDateFormat()));
+			$this->modified		= $this->_db->Quote($date->toSql());
 			$this->modified_by	= $user->get('id');
 		} else {
 			// New weblink. A weblink created and created_by field can be set by the user,
 			// so we don't touch either of these if they are set.
 			if (!intval($this->created)) {
-				$this->created = $this->_db->Quote($date->format($this->_db->getDateFormat()));
+				$this->created = $this->_db->Quote($date->toSql());
 			}
 			if (empty($this->created_by)) {
 				$this->created_by = $user->get('id');
