@@ -389,8 +389,7 @@ class ContentModelArticles extends JModelList
 
 		// Filter by start and end dates.
 		$nullDate	= $db->Quote($db->getNullDate());
-		$date = JFactory::getDate();
-		$nowDate	= $db->Quote($date->format($db->getDateFormat()));
+		$nowDate	= $db->Quote(JFactory::getDate()->toSql());
 
 		$query->where('(a.publish_up = '.$nullDate.' OR a.publish_up <= '.$nowDate.')');
 		$query->where('(a.publish_down = '.$nullDate.' OR a.publish_down >= '.$nowDate.')');
