@@ -134,8 +134,7 @@ class ContentModelCategory extends JModelList
 			$this->setState('filter.published', 1);
 			// Filter by start and end dates.
 			$nullDate = $db->Quote($db->getNullDate());
-			$date = JFactory::getDate();
-			$nowDate = $db->Quote($date->format($db->getDateFormat()));
+			$nowDate = $db->Quote(JFactory::getDate()->toSQL());
 
 			$query->where('(a.publish_up = ' . $nullDate . ' OR a.publish_up <= ' . $nowDate . ')');
 			$query->where('(a.publish_down = ' . $nullDate . ' OR a.publish_down >= ' . $nowDate . ')');
