@@ -143,7 +143,7 @@ class WeblinksModelCategory extends JModelList
 		// Filter by start and end dates.
 		$nullDate = $db->Quote($db->getNullDate());
 		$date = JFactory::getDate();
-		$nowDate = $db->Quote($date->format($db->getDateFormat()));
+		$nowDate = $db->Quote($date->toSql());
 
 		if ($this->getState('filter.publish_date')){
 			$query->where('(a.publish_up = ' . $nullDate . ' OR a.publish_up <= ' . $nowDate . ')');
