@@ -1,7 +1,4 @@
 /**
- * @version		$Id$
- * @package		Joomla.Administrator
- * @subpackage	com_languages
  * @copyright	Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
